--- a/jade/component/mural-tab1.jade
+++ b/jade/component/mural-tab1.jade
@@ -1,4 +1,4 @@
-a.prev-underline.back-panel(href="mural-list.html")
+a.prev-underline.back-panel.linkFade(href="mural-list.html")
 	i.fa.fa-angle-left(aria-hidden="true")
 	span Back To Murals
 .filter-wrap.top-150
