--- a/jade/mural-list.jade
+++ b/jade/mural-list.jade
@@ -165,129 +165,7 @@ html.no-js
 				window.sr = ScrollReveal(config);
 				sr.reveal('.panel-column');
 
-				Barba.Prefetch.init();
-				Barba.Pjax.start();
-				Barba.Dispatcher.on('newPageReady', function(currentStatus, oldStatus, container) {
-					$(function(){
-						
-						$('.back-panel').click(function(){
-							parent.history.back();
-							return false;
-						});
-						
-						$('.panel-column a').click(function(){
-							$('html,body').animate({
-								scrollTop: $("#content").offset().top - 50},
-							'slow');
-						});
-						var config = {
-							viewFactor: 0.15,
-							duration: 800,
-							distance: '0px',
-							scale: 0.8
-						}
-						
-						window.sr = ScrollReveal(config);
-						sr.reveal('.revealer');
-						$('.mural-container').gridalicious({
-							selector: '.item',
-							animate: true,
-							width: 400
-						});
-						$('.parallax').parallax();
-						$('.item').hover(function(){
-							$('.item').not(this).css('opacity', '0.4');
-						}, function(){
-							$('.item').not(this).css('opacity', '1');
-						});
-						[].slice.call( document.querySelectorAll( 'select.filter-select' ) ).forEach( function(el){	
-							new SelectFx(el);
-						}); 
-						$('.sticky-header').stick_in_parent({
-							offset_top: 50
-						});
-					});
-				});
-
-				var FadeTransition = Barba.BaseTransition.extend({
-				  start: function() {
-				    /**
-				     * This function is automatically called as soon the Transition starts
-				     * this.newContainerLoading is a Promise for the loading of the new container
-				     * (Barba.js also comes with an handy Promise polyfill!)
-				     */
-
-				    // As soon the loading is finished and the old page is faded out, let's fade the new page
-				    Promise
-				      .all([this.newContainerLoading, this.fadeOut()])
-				      .then(this.fadeIn.bind(this));
-				  },
-
-				  fadeOut: function() {
-				    /**
-				     * this.oldContainer is the HTMLElement of the old Container
-				     */
-					
-				    return $(this.oldContainer).animate({ opacity: 0 }).promise();
-				  },
-
-				  fadeIn: function() {
-				    /**
-				     * this.newContainer is the HTMLElement of the new Container
-				     * At this stage newContainer is on the DOM (inside our #barba-container and with visibility: hidden)
-				     * Please note, newContainer is available just after newContainerLoading is resolved!
-				     */
-
-				    var _this = this;
-				    var $el = $(this.newContainer);
-
-				    $(this.oldContainer).hide();
-
-				    $el.css({
-				      visibility : 'visible',
-				      opacity : 0
-				    });
-
-				    $el.animate({ opacity: 1 }, 2000, function() {
-				      /**
-				       * Do not forget to call .done() as soon your transition is finished!
-				       * .done() will automatically remove from the DOM the old Container
-				       */
-
-				      _this.done();
-				    });
-				  }
-				});
 				
-
-				/**
-				 * Next step, you have to tell Barba to use the new Transition
-				 */
-
-				Barba.Pjax.getTransition = function() {
-				  /**
-				   * Here you can use your own logic!
-				   * For example you can use different Transition based on the current page or link...
-				   */
-				   var transitionObj = FadeTransition;
-				 		
-					//- if (Barba.HistoryManager.prevStatus().namespace === 'event') {
-				 //-       $('#barba-wrapper').show();
-				 //-       $('.transition-page').show('300');
-				       
-				 //-    } else {
-				 //-    	$('#barba-wrapper').hide();
-				 //-    	setTimeout(function(){
-					//- 		//- $('.transition-page').hide('300');
-					//- 		$('#barba-wrapper').show('300');
-
-							 
-					//- 	}, 800);
-						
-				 //-    }		
-				return transitionObj;
-				 
-				};
 			});
 	body
 		.loader-bg
@@ -339,7 +217,7 @@ html.no-js
 							- var list = [{ name : "POWWOW LONG BEACH", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/20160712-DSC02981.jpg", date : "2016" }, { name : "POWWOW DC", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Persue-Yok-Sheryo-5-26-FS-1.jpg", date : "2016" },{ name : "POWWOW SXSW", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/day5_fafi_kamea_gress.jpg", date : "2016" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/usugrow-20160214.jpg", date : "2016" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Telmo-Miel.jpg", date : "2016" },{ name : "POWWOW TAIWAN", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/DSC09144.jpg", date : "2016" }, { name : "POWWOW JAPAN", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/DSC05508.jpg", date : "2016" },{ name : "POWWOW LONG BEACH", data : "http://powwowhawaii.com/wp-content/uploads/2015/07/2-1277x848.jpg", date : "2015" },{ name : "POWWOW SXSW", data : "http://powwowhawaii.com/wp-content/uploads/2015/04/pw-sxsw-3-1277x848.jpg", date : "2015" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2015/03/olek-1-1277x848.jpg", date : "2015" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Andrew-Hem-Yoskay-Yamamoto-Edwin-Ushiro.jpg", date : "2015" },{ name : "POWWOW TAIWAN", data : "http://powwowhawaii.com/wp-content/uploads/2014/04/pwtw_process_18-1277x848.jpg", date : "2014" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2014/03/7K9A0020-3-1277x848.jpg", date : "2014" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Aaron-Li-Hill.jpg", date : "2014" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/7K9A0019-1277x848.jpg", date : "2013" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Defer.jpg", date : "2013" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/DSC02060-1277x848.jpg", date : "2012" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Sket-One.jpg", date : "2012" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/IMG_0003-1277x848.jpg", date : "2011" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/The-Draculas-01.jpg", date : "2011" },{ name : "POWWOW HONG KONG", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/artist_01-1277x848.jpg", date : "2010" }]
 								each item in list
 									.medium-4.small-12.columns.panel-column.end.safari_only
-										a(href="mural-tab1.html")
+										a(href="mural-tab1.html").linkFade
 											.ratio-hack
 												div.i-artist-thumb(style="background-image: url("+item.data+");")
 													.i-artist-overlay
