--- a/jade/participants.jade
+++ b/jade/participants.jade
@@ -188,7 +188,7 @@ html.no-js
 									option(value="za") Z-A
 						.filter-submit 
 							button APPLY
-					div.artists-content-block
+					.artists-content-block
 						.row
 							- var list = [{ name : "alexface", data : "graffiti artist" },{ name : "caratoes", data : "music artist" },{ name : "colasa", data : "music artist"},{ name : "debe", data : "music artist"},{ name : "girenhao", data : "graffiti artist"}, { name : "horton", data : "graffiti artist"},{ name : "nychos", data : "music artist"}]
 								each item in list
