--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -143,6 +143,12 @@
 					}
 				}
 			}
+			.sm-lang-box-wrapper {
+				display: none;
+				.lang-select-box {
+					margin: 0 auto;
+				}
+			}
 		}
 	}
 }
