--- a/scss/module/_select.scss
+++ b/scss/module/_select.scss
@@ -6,16 +6,15 @@
 		.cs-options {
 			background: rgba(0, 0, 0, 0.75);
 		}
-		// ul span {
-		// 	color: #333;
-		// }
 	}
 }
 .lang-select-box {
 	padding: 0;
 	text-align: right;
 	max-width: 70px;
+	font-size: 1em;
 }
+
 div.cs-select {
 	display: inline-block;
 	vertical-align: middle;
