--- a/jade/festival.jade
+++ b/jade/festival.jade
@@ -20,26 +20,23 @@ html.no-js
 		<meta name="apple-mobile-web-app-title" content="POW! WOW!">
 		<meta name="application-name" content="POW! WOW!">
 		<meta name="theme-color" content="#ffffff">
-		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js')
-		script(src='js/materialize.js')
-		script(src='js/foundation.js')
-		script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js')
-		script(src='js/classie.js')
-		script(src='js/selectFx.js')
-		script(src='js/barba.min.js')
-		script(src='js/timeliner.js')
-		script(src='js/jquery.grid-a-licious.js')
-		script(src='js/scrollTo.js')
-		script(src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js")
 		link(rel='stylesheet', href='font/aller.css')
-		link(rel='stylesheet', href='css/flexslider.css')
 		link(rel='stylesheet', href='css/foundation.css')
 		link(rel='stylesheet', href='css/materialize.css')
-		link(rel='stylesheet', href='css/font-awesome.css')
 		link(rel='stylesheet', href='css/lightbox.css')
+		link(rel='stylesheet', href='css/font-awesome.css')
 		link(rel='stylesheet', href='css/timeliner.css')
 		link(rel='stylesheet', href='css/styles.css')
 		link(href='https://fonts.googleapis.com/css?family=Ubuntu:400,700,300', rel='stylesheet', type='text/css')
+		script(src='js/jquery.min.js')
+		script(src='js/materialize.js')
+		script(src='js/foundation.js')
+		script(src='js/jquery-ui.min.js')
+		script(src='js/classie.js')
+		script(src='js/selectFx.js')
+		script(src='js/scrollTo.js')
+		script(src='js/jquery.grid-a-licious.js')
+		script(src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js")
 		script.
 			function goToByScroll(id){
 				id = id.replace("link", "");
@@ -142,51 +139,25 @@ html.no-js
 
 					return (!(viewport.right < bounds.left || viewport.left > bounds.right || viewport.bottom < bounds.top || viewport.top > bounds.bottom));
 				};
-				$('.tabs-title a').each(function(){
-					$(this).click(function(e){
-						$('.tabs-title a').removeClass('is-active');
-						$(this).addClass('is-active');
-						var link = $(this).attr('href');
-						$('.event-list-wrapper').scrollTo($(link), 800);
-						e.preventDefault();
-					})
-				});
+				
 				[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el){	
 					new SelectFx(el);
 				});  
-				$('.parallax').parallax();
-
-				$('.panel').click(function(){
-					$('html,body').animate({
-						scrollTop: $("#content").offset().top - 50},
-					'slow');
+				//- $('.parallax').parallax();
+				$('.artists-content-block').each(function(){
+					$(this).find('.index-artist-block').last().addClass('end');
 				});
 				function expand() {
 					$('.event-list-panel').each(function(){
 						if($(window).width() > 480 ) {
 							$(this).hover(function(){
-								$(this).find('.panel-hack').addClass('hover');
-								$(this).find('.panel-hack').addClass('expand');
-								$(this).next().find('.panel-hack').addClass('shrink-right');
-								$(this).prev().find('.panel-hack').addClass('shrink-left');
 								$('.event-list-panel').not(this).css('opacity', '0.4');
 								$(this).css('z-index', '999');
 
 							}, function(){
-								$(this).find('.panel-hack').removeClass('hover');
-								$(this).find('.panel-hack').removeClass('expand');
-								$(this).next().find('.panel-hack').removeClass('shrink-right');
-								$(this).prev().find('.panel-hack').removeClass('shrink-left');
 								$('.event-list-panel').not(this).css('opacity', '1');
 								$(this).css('z-index', '5');
 							});
-						} else {
-							$(this).hover(function(){
-								$(this).find('.panel-hack').addClass('hover');
-								$(this).find('.panel-hack').removeClass('expand');
-								$(this).next().find('.panel-hack').removeClass('shrink-right');
-								$(this).prev().find('.panel-hack').removeClass('shrink-left');
-							});	
 						}
 					});
 				}		
@@ -194,171 +165,27 @@ html.no-js
 				$(window).resize(function(){
 					expand();
 				});
-				//- $('.panel').each(function(){
-				//- 	$(this).click(function(e){
-				//- 		var target = $(this).attr('data-tag');
-				//- 		$('.frame').hide('fast', loadContent)
-				//- 		function loadContent() {
-				//- 			$('.frame').load(target + '.html', showNewContent)
-				//- 		}
-				//- 		function showNewContent() {
-				//- 			setTimeout(function(){
-				//- 				$('.frame').slideDown('slow');
-				//- 			}, 300);			
-				//- 		}
-						
-						
-				//- 		return false;
-				//- 	});
-				//- });
-				
-				// Don't forget to init the view!
-				Barba.Prefetch.init();
-				Barba.Pjax.start();
-				Barba.Dispatcher.on('newPageReady', function(currentStatus, oldStatus, container) {
-					$(function(){
-						
-						$('.mural-container').gridalicious({
-							selector: '.item',
-							width: 400
-						});
-						
-						$('.item').hover(function(){
-							$('.item').not(this).css('opacity', '0.4');
-						}, function(){
-							$('.item').not(this).css('opacity', '1');
-						});
-						$.timeliner({
-							baseSpeed: 300,
-							speed: 1
-						});
-						$('.panel').click(function(){
-							$('html,body').animate({
-								scrollTop: $("#content").offset().top - 50},
-							'slow');
-						});
-						
-						$('.tabs-title a').each(function(){
-							$(this).click(function(e){
-								$('.tabs-title a').removeClass('is-active');
-								$(this).addClass('is-active');
-								var link = $(this).attr('href');
-								$('.event-list-wrapper').scrollTo($(link), 800);
-								e.preventDefault();
-							})
-						});
-						$('.event-list-panel').each(function(){
-							if($(window).width() > 480 ) {
-								$(this).hover(function(){
-									$(this).find('.panel-hack').addClass('hover');
-									$(this).find('.panel-hack').addClass('expand');
-									$(this).next().find('.panel-hack').addClass('shrink-right');
-									$(this).prev().find('.panel-hack').addClass('shrink-left');
-									$('.event-list-panel').not(this).css('opacity', '0.4');
-									$(this).css('z-index', '999');
-
-								}, function(){
-									$(this).find('.panel-hack').removeClass('hover');
-									$(this).find('.panel-hack').removeClass('expand');
-									$(this).next().find('.panel-hack').removeClass('shrink-right');
-									$(this).prev().find('.panel-hack').removeClass('shrink-left');
-									$('.event-list-panel').not(this).css('opacity', '1');
-									$(this).css('z-index', '5');
-								});
-							} else {
-								$(this).hover(function(){
-									$(this).find('.panel-hack').addClass('hover');
-									$(this).find('.panel-hack').removeClass('expand');
-									$(this).next().find('.panel-hack').removeClass('shrink-right');
-									$(this).prev().find('.panel-hack').removeClass('shrink-left');
-								});	
-							}
-						});
+				$('.mural-container').gridalicious({
+					selector: '.item',
+					width: 400
+				});
+				$('.item').hover(function(){
+					$('.item').not(this).css({
+						'opacity' : '0.4',
+						'z-index' : '10'
 					});
+					$('.card-bg-fix').css('z-index', '-1');
+				}, function(){
+					$('.item').not(this).css({
+						'opacity' : '1',
+						'z-index' : '2'
+					});
+					$('.card-bg-fix').css('z-index', '0');
 				});
-
-				var FadeTransition = Barba.BaseTransition.extend({
-				  start: function() {
-				    /**
-				     * This function is automatically called as soon the Transition starts
-				     * this.newContainerLoading is a Promise for the loading of the new container
-				     * (Barba.js also comes with an handy Promise polyfill!)
-				     */
-
-				    // As soon the loading is finished and the old page is faded out, let's fade the new page
-				    Promise
-				      .all([this.newContainerLoading, this.fadeOut()])
-				      .then(this.fadeIn.bind(this));
-				  },
-
-				  fadeOut: function() {
-				    /**
-				     * this.oldContainer is the HTMLElement of the old Container
-				     */
-					
-				    return $(this.oldContainer).animate({ opacity: 0 }).promise();
-				  },
-
-				  fadeIn: function() {
-				    /**
-				     * this.newContainer is the HTMLElement of the new Container
-				     * At this stage newContainer is on the DOM (inside our #barba-container and with visibility: hidden)
-				     * Please note, newContainer is available just after newContainerLoading is resolved!
-				     */
-
-				    var _this = this;
-				    var $el = $(this.newContainer);
-
-				    $(this.oldContainer).hide();
-
-				    $el.css({
-				      visibility : 'visible',
-				      opacity : 0
-				    });
-
-				    $el.animate({ opacity: 1 }, 2000, function() {
-				      /**
-				       * Do not forget to call .done() as soon your transition is finished!
-				       * .done() will automatically remove from the DOM the old Container
-				       */
-
-				      _this.done();
-				    });
-				  }
-				});
-				
-
-				/**
-				 * Next step, you have to tell Barba to use the new Transition
-				 */
-
-				Barba.Pjax.getTransition = function() {
-				  /**
-				   * Here you can use your own logic!
-				   * For example you can use different Transition based on the current page or link...
-				   */
-				   var transitionObj = FadeTransition;
-				 		
-					//- if (Barba.HistoryManager.prevStatus().namespace === 'event') {
-				 //-       $('#barba-wrapper').show();
-				 //-       $('.transition-page').show('300');
-				       
-				 //-    } else {
-				 //-    	$('#barba-wrapper').hide();
-				 //-    	setTimeout(function(){
-					//- 		//- $('.transition-page').hide('300');
-					//- 		$('#barba-wrapper').show('300');
-
-							 
-					//- 	}, 800);
-						
-				 //-    }		
-				return transitionObj;
-				 
-				};
-				
-				
-
+				$('.google-maps').click(function(){
+					$(this).find('iframe').addClass('clicked')}).mouseleave(function(){
+						$(this).find('iframe').removeClass('clicked')});
+				$('.parallax').parallax();
 			});
 	body
 		.loader-bg
@@ -368,24 +195,16 @@ html.no-js
 				.bounce3
 		.wrapper
 			include component/header.jade
-			.content
-				.parallax-container
+			.content.padding-50
+				.parallax-container.sm-parallax
 					.parallax
-						img(src='img/banner1.jpg')
+						img(src='img/powwowevent.jpg')
 						.pattern-hack
 					.banner-slogan
-						p.page-slogan events
-						.banner-button.arrow-down: a#contentlink(href="#") SEE EVENTS
-				a#content(href="#")
-				.transition-page#barba-wrapper
+						p.page-slogan POW! WOW! HAWAII! 2016
+				.transition-page.index-event.index-sec
+					h3 Events
 					.barba-container
-						ul.tabs#event-tabs
-							li.tabs-title
-								a.is-active(href="#panel") 2016
-							li.tabs-title
-								a(href="#panel2") 2015
-							li.tabs-title
-								a(href="#panel3") 2014
 						.tabs-content(data-tabs-content='event-tabs')
 							.tabs-panel.is-active#panel1
 								.event-list-wrapper
@@ -456,7 +275,40 @@ html.no-js
 													span Feb. 5 2015 ~ Feb. 8 2014
 													h4 “REEL TAWLK” BY PATRICK MARTINEZ
 													span.panel-foot see event
-				
+					.index-artist.artists-content-block.index-sec
+						h3 Participants
+						.row
+							- var list = [{ name : "alexface", data : "graffiti artist" },{ name : "caratoes", data : "music artist" },{ name : "colasa", data : "music artist"},{ name : "debe", data : "music artist"},{ name : "girenhao", data : "graffiti artist"}, { name : "horton", data : "graffiti artist"},{ name : "nychos", data : "music artist"}]
+								each item in list
+									.medium-4.small-12.columns.index-artist-block.revealer.safari_only
+										a.linkFade(href="artist.html")
+											.ratio-hack
+												div.i-artist-thumb(style="background-image: url(img/"+item.name+"_thumb.jpg);")
+													.i-artist-overlay
+													.artist-name-cat
+														p=item.name
+														p.underline
+														p=item.data
+					.index-artist
+						h3 Map
+						.google-maps
+							<iframe src="https://www.google.com/maps/d/u/0/embed?mid=19s8FCjqTaJEw3mL0B5paTyTV8GU" width="640" height="480"></iframe>
+					.mural-container
+						h3 Murals
+						- var list = [{ name : "Cara To AKA 'Caratoes' is an illustrator and street artist based in Hong Kong.", author : "Caratoes", data : "wall1" }, { name : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat consectetur pellentesque. Nam ac elit risus, ac blandit dui. Duis rutrum porta tortor ut convallis.", author : "DEBE", data : "wall2" },{ name : "ANO Started practicing graffiti art in 1999 on the streets, often using pixels as his basic element of design. Proficient in various graffiti techniques, Ano has often collaborated with television advertising and well-known brands doing performances for Rolex, NIKE, Adidas,Puma ,Converse, Royal Elastics, ASUS, and more. ", author : "ANO", data : "wall3" },{ name : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat consectetur pellentesque.Nam ac elit risus, ac blandit dui. Duis rutrum porta tortor ut convallis. Duis rutrum porta tortor ut convallis. Duis rutrum porta tortor ut convallis.", author : "Girenhao", data : "wall4" },{ name : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat consectetur pellentesque. Nam ac elit risus, ac blandit dui. Duis rutrum porta tortor ut convallis. Duis rutrum porta tortor ut convallis.", author : "Alexface", data : "wall5" },{ name : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed feugiat consectetur pellentesque. Nam ac elit risus, ac blandit dui. Duis rutrum porta tortor ut convallis. Duis rutrum porta tortor ut convallis.", author : "Colasa", data : "wall1" }]
+								each item in list
+									.item
+										a(href="mural.html").no-barba.linkFade
+											img(src="img/"+item.data+".jpg", data-caption=item.name)
+											p.author-name=item.author
+											p=item.name
+										.card-bg-fix
+					
 			include component/footer.jade
-			a.back-to-top.ripple(href="#") TOP
-	
+			//- a.back-to-top.ripple(href="#") TOP
+	script(src='js/lightbox.js')
+	script.
+		lightbox.option({
+				'fadeDuration': 300,
+				'resizeDuration': 300
+			});
