--- a/scss/mediaquery/_mediaquery.scss
+++ b/scss/mediaquery/_mediaquery.scss
@@ -140,7 +140,9 @@
 	.screen-menu .sm-wrapper .search-wrap {
 		margin-bottom: 5px;
 	}
-	
+	.medium-1.columns.header-menu.mobile-fix {
+		width: 50px;
+	}
 	.search-textfield {
 		height: 30px;
 		background-size: 29px 29px;
@@ -284,10 +286,8 @@
 	.lang-box-wrapper {
 		display: none;
 	}
-	.screen-menu .sm-wrapper .sm-menu div.sm-lang-box-wrapper {
+	.screen-menu .sm-wrapper .sm-menu .sm-lang-box-wrapper {
 		display: block;
-		margin: 0 auto;
-		text-align: center;
 	}
 }
 @media only screen and (max-width: 400px) {
